--- a/content/blog/fixing-long-netlify-gatsby-builds/index.mdx
+++ b/content/blog/fixing-long-netlify-gatsby-builds/index.mdx
@@ -3,32 +3,34 @@ title: How to fix crazy long Gatsby builds on Netlify
 date: 2021-11-05
 description: For no obvious reason, it takes a lot of time to deploy my Gatsby site on Netlify, but I found why
 ---
-So I'm writing this blog post - all is good, I finish writing, checking it with Grammarly - and then I think: "OK, just three more minutes to deploy and I'm done". 
+So I'm writing this blog post - all is good, I finish writing, checking it with Grammarly - and then I think: "OK, just three more minutes to deploy, and I'm done". 
 
-I go to Github, create the PR for the branch with the new post, and then open Netlify to see how the deploy is going (for my PRs a new deploy is started automatically for preview.)
+I go to Github, create the PR for the branch with the new post, and then open Netlify to see how the deployment is going (for my PRs a new deploy is started automatically for preview.)
 
-And I wait... and I wait.. and I wait... 10 minutes went on, I panick 
-and I cancel the deploy. I'm thinking maybe there was a glich in Netlify bowels and I start a new one. I wait again... Finally after 13 minutes the build finishes.
+And I wait... and I wait.. and I wait... 10 minutes went on, I panic 
+and I cancel the deploy. I'm thinking maybe there was a glitch in Netlify bowels and I start a new one. I wait again... Finally after 13 minutes the build finishes.
 
 
 > I'm on the free plan (Starter) on Netlify. It includes 300 minutes/30 days of build time. For all my account websites.
 
-In run the build on my local machine, the same build runs in 2 minutes so clearly something is very wrong somewhere. So I look at the Netlify build logs:
+I run the build on my local machine, the same build runs in 2 minutes so clearly something is very wrong somewhere. So I look at the Netlify build logs:
 
 The first weird thing is that the cache is huge:
 ![Cache is huge](./cache_log.png "Cache is huge")
-On my local machine the `.cache` + `public` folders are under 60Mb. Where are the other 900Mb coming from? After further investigation I've found that this cache keeps other things also, like the `node_modules` :)
+
+On my local machine, the `.cache` + `public` folders are under 60Mb. Where are the other 900Mb coming from? After further investigation, I've found that this cache keeps other things also, like the `node_modules` 😅
 
 The other weird thing is that the `Caching HTML renderer compilation` takes most of the build time:
 ![Caching HTML renderer compilation](./build_log.png "Caching HTML renderer compilation")
+
 My Gatsby 3 build seams blocked between `onPostBuild` and `Caching HTML renderer compilation`.
 
-The cache is clearly the issue. Instead of making the build faster it makes it crazy slow.
+The cache is the issue. Instead of making the build faster, it makes it crazy slower 😞
 
 There are two fixes I did:
 
 ## Clear the cache
-To get rid of the huge cache you need to got to your site page on Netlify, choose Deploys, select the last deploy, and from "Retry deploy" dropdown, redeploy the site with "Clear cache and redeploy site" option:
+To get rid of the huge cache you need to go to your site page on Netlify, choose Deploys, select the last deploy, and from the "Retry deploy" dropdown, redeploy the site with the "Clear cache and redeploy site" option:
 ![Clear cache](./deploy.png "Clear cache")
 
 ## Use the new Essential Gatsby plugin
@@ -39,9 +41,9 @@ Looking at my site's `netlify.toml` I see that I use a deprecated plugin for cac
 ```
 Which was ironically making my build slow.
 
-I've removed it, and from the my website's Plugins page I've added "Essential Gatsby" plugin:
+I've removed it, and from my website's Plugins page, I've added "Essential Gatsby" plugin:
 ![Plugins](./plugins.png "Plugins")
 
-> If you use this plugin, the cache will be created again, but a bit smaller this time
+> If you use this plugin, the cache will be created again, but a bit smaller this time.
 
 After these changes, the build time is back to 3 minutes. 
